[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"

[[bin]]
name = "day-1"

[[bin]]
name = "day-2"

[[bin]]
name = "day-3"

[[bin]]
name = "day-4"

[[bin]]
name = "day-5"

[[bin]]
name = "day-6"

[[bin]]
name = "day-7"

[[bin]]
name = "day-8"

[[bin]]
name = "day-9"

[[bin]]
name = "day-10"

[[bin]]
name = "day-11"

[[bin]]
name = "day-12"
